Corrections z-index et article-image

--- a/src/js/components/layouts/tfpage/tfpage_style.scss
+++ b/src/js/components/layouts/tfpage/tfpage_style.scss
@@ -25,6 +25,7 @@ div.tf-header-background{
 // Full-width static content
 div.tf-content{
     width: 100%;
+    background: $bgcolor;
 }
 
 // Static-content when menu appears
