--- a/src/js/components/widgets/tfthemeSelect/tfthemeSelect_style_generic.scss
+++ b/src/js/components/widgets/tfthemeSelect/tfthemeSelect_style_generic.scss
@@ -4,6 +4,8 @@ section.tf-theme-select{
     $theme-selector-height: 32rem;
 
     background: none;
+    position: relative;
+    z-index: 1;
 
     h2{
         font-family: 'Raleway', sans-serif;
@@ -59,7 +61,7 @@ section.tf-theme-select{
         width: 100%; height: 100%;
         position: absolute;
         top: 0; left: 0;
-        z-index: 0;
+        z-index: 1;
         background-size: cover;
         background-position: center;
 
@@ -68,7 +70,7 @@ section.tf-theme-select{
             width: 100%; height: 100%;
             position: absolute;
             top: 0; left: 0;
-            z-index: 0;
+            z-index: 1;
             background-size: cover;
             background-position: center;
             opacity: 1;
